修改首頁、新增頭貼

--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>你好，GitHub</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="Brian's web" />
+    <meta name="author" content="Brian Tsung" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Brian Tsung</title>
+    <style>
+      .window {
+        width: 97vw;
+        height: 97vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
   </head>
-  <body>
-    <h1>覺得厲害</h1>
+  <body style="background-color: #457b9d;">
+    <div class="window">
+      <h1 style="font-family:Microsoft JhengHei; font-weight: bold; color: azure;">叢伯蘭/Brian Tsung</h1>&emsp;
+      <img
+        src="headshot.jpg"
+        style="width:15%; border-radius: 50%;"
+      />
+    </div>
   </body>
 </html>
