--- a/PersonalWebpage/index.html
+++ b/PersonalWebpage/index.html
@@ -25,7 +25,7 @@
       <div class="namebox">
         <h1 class="name">
           <span class="letters">叢伯蘭/Brian Tsung</span>
-          <span class="line" style="margin-top: 10px;"></span>
+          <span class="line" style="margin-top: 10px"></span>
         </h1>
       </div>
 
