--- a/landscape_Pix2Pix/index.html
+++ b/landscape_Pix2Pix/index.html
@@ -16,7 +16,8 @@
     <link href="./cropper.css" rel="stylesheet">
     <link rel="stylesheet" href="./ImgCropping.css">
     <script src="./cropper.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.1.2"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.1.2"></script> -->
+    <script src="http://unpkg.com/@tensorflow/tfjs/dist/tf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script>
     <script src="./utils.js"></script>
