--- a/landscape_Pix2Pix/index.html
+++ b/landscape_Pix2Pix/index.html
@@ -49,7 +49,7 @@
 						<section id="banner">
 							<div class="inner">
 								<h1>以生成對抗網路實現中華文化之藝術畫作</h1>
-								<p>by <a href="https://www.facebook.com/profile.php?id=100002345932403">Johnny Chen</a></p>
+								<p>by Brian Tsung, Jason Ma, Johnny Chen</p>
 								<ul class="actions">
 									<li><a href="#galleries" class="button alt scrolly big">Continue</a></li>
 								</ul>
